--- a/AutoClick/Pages/Index.cshtml
+++ b/AutoClick/Pages/Index.cshtml
@@ -130,7 +130,8 @@
             display: block !important;
             height: 1px;
             background: rgba(255, 255, 255, 0.15);
-            margin: 16px 0;
+            width: calc(100% - 32px);
+            margin: 16px 16px !important;
         }
         
         /* Quitar subrayado de links en cards */
@@ -353,7 +354,7 @@
         .index-section-responsive {
             display: block !important;
             position: relative !important;
-            padding: 0 16px;
+            padding: 0;
             margin-top: 20px;
         }
         
@@ -364,14 +365,15 @@
         
         .index-section-responsive .index-noticias-container {
             width: 100% !important;
-            padding: 0 16px 0 16px !important;
+            padding: 0 40px 0 40px !important;
         }
         
         .index-section-divider {
             display: block !important;
             height: 1px;
             background: rgba(255, 255, 255, 0.15);
-            margin: 20px 0;
+            width: calc(100% - 80px);
+            margin: 20px 40px !important;
         }
         
         /* Quitar subrayado de links en cards */
